tools/flowc/tests/errors/error22.flow
foo() {
	a = 1;
	a.structname;
}
